tests/negative-fixity/out.txt
error: fixity is negative: -3
  ┌─ err.sml:1:7
  │
1 │ infix ~3 bad
  │       ^^

parsing failed
